test/expected/error_multibyte_column.out
[CompoundList]
  [CompoundListCondition, None]
    [Assign a=€]
  [CompoundListCondition, None]
    [SimpleCommand "doesnotexist_xyz*"]
[Word
  Unquoted "a=€"
]
[Word
  Unquoted "doesnotexist_xyz*"
]
shit: 3:1: error: The glob pattern 'doesnotexist_xyz*' matched no file, it expands to its literal text, which is rarely intended. Probe for matches with compgen -G 'doesnotexist_xyz*' or relax with set +o failglob.
     3 |  doesnotexist_xyz*
       |  ^~~~~~~~~~~~~~~~~ here.
